--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,6 @@
 html {
     font-family: 'Open Sans', sans-serif;
+    color: #333333;
 }
 
 body {
@@ -20,97 +21,17 @@ header {
     border-radius: 0 0 500px 300px;
 }
 
-
-header .bubble {
-    position: absolute;
-    top: 20%;
-    left: 70%;
-    width: 100px;
-    height: 100px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    border-top-right-radius: 100px;
-    border-top-left-radius: 100px;
-    background-color: #f2f2f2;
-    transition: all 1s;
-}
-
-header .bubble:hover {
-    position: absolute;
-    top: 20%;
-    left: 70%;
-    width: 120px;
-    height: 120px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 0px;
-    border-top-right-radius: 100px;
-    border-top-left-radius: 0px;
-    background-image: linear-gradient(to bottom right, #9bff4f, #fff44f, #fff44f);
-    transition: all 1s;
-}
-
-header .bubble1 {
-    position: absolute;
-    top: 70%;
-    left: 15%;
-    width: 100px;
-    height: 100px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    border-top-right-radius: 100px;
-    border-top-left-radius: 100px;
-    background-color: #f2f2f2;
-    transition: all 1s;
-}
-
-header .bubble1:hover {
-    position: absolute;
-    top: 70%;
-    left: 15%;
-    width: 120px;
-    height: 120px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 100px;
-    border-top-right-radius: 0px;
-    border-top-left-radius: 100px;
-    background-image: radial-gradient(black, black, white, white, white);
-    transition: all 1s;
-}
-
-header .ball {
-    position: absolute;
-    top: 85%;
-    left: 85%;
-    width: 100px;
-    height: 100px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    border-top-right-radius: 100px;
-    border-top-left-radius: 100px;
-    background-color: #434343;
-    transition: all 1s;
-}
-
-header .ball:hover {
-    position: absolute;
-    top: 85%;
-    left: 85%;
-    width: 120px;
-    height: 120px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    border-top-right-radius: 100px;
-    border-top-left-radius: 100px;
-    background-image: linear-gradient(#de3333, #ff1c1c);
-    transition: all 1s;
-}
-
-.headerbtn {
+.center {
     display: flex;
     justify-content: center;
-    align-content: flex-end;
-    top: 68vh;
-    position: relative;
+    align-items: center;
+    height: inherit;
+    width: 100%;
+    color: #091f2f;
+}
+
+.text-center {
+    text-align: center;
 }
 
 nav {
@@ -125,21 +46,27 @@ nav {
     box-shadow: 0px 1px 20px 1px black;
 }
 
+nav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 25px 16px;
+    text-decoration: none !important;
+    font-size: 15px;
+}
+
+nav a:hover {
+    color: #bfbfbf;
+}
+
 .navtitle {
     float: left;
-    font-size: 35px;
+    font-size: 30px;
     padding: 15px;
 }
 
 .title {
-    margin-left: 40px;
-    top: 40%;
-    position: absolute;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    width: 50vh;
+    font-weight: 600;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -161,63 +88,19 @@ nav {
 
 .bold {
     font-weight: 600;
-    color: #222222;
+    color: inherit;
 }
 
-.cardflip {
-    background-color: transparent;
+.box {
+    background-color: #333;
     margin-left: 15%;
-    top: 35%;
+    top: 25%;
     position: absolute;
     color: #fff;
     padding: 20px;
     border-radius: 10px;
-    width: 50vh;
+    width: 40vh;
     perspective: 1000px;
-    height: 160px;
-}
-  
-.cardflip-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.5s;
-    transform-style: preserve-3d;
-}
-  
-.cardflip:hover .cardflip-inner {
-    transform: rotateY(180deg);
-}
-
-.cardflip-front, .cardflip-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; 
-    backface-visibility: hidden;
-    box-shadow: 0px 0px 20px black;
-}
-  
-.cardflip-front {
-    background-color: #333;
-    color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
-  
-.cardflip-back {
-    background-color: #333;
-    color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    transform: rotateY(180deg);
 }
 
 .grid {
