--- a/css/custom.css
+++ b/css/custom.css
@@ -176,3 +176,16 @@ nav a:hover {
     background-color: #fff;
     color: #222;  
 }
+
+footer {
+    background-color: #222222;
+    color: #fff;
+}
+
+footer a {
+    padding-left: 5px;
+}
+
+footer a:hover {
+    color: #e2e2e2;
+}
