--- a/css/custom.css
+++ b/css/custom.css
@@ -197,3 +197,15 @@ footer a {
 footer a:hover {
     color: #e2e2e2;
 }
+
+
+@media only screen and (max-width: 425px) {
+
+    nav {
+        padding: 0 10px;
+    }
+
+    .grid img {
+        height: 30%;
+    }
+}
